# jAnaBootCamp

cadfiles/: viewSTL.py
cadfiles/model/: Acmirror.stl  Assembly1.stl  acHousing.stl  acmirrorSup.stl  fullAChouse.stl
example1/: CMakeLists.txt  example1.cxx
example1/hello/: CMakeLists.txt  hello.cxx
example1/hello/include/: LinkDef.hh  hello.h
example2/: Makefile  advMap.cxx  erastosthenes.cxx
hacksC++/: combinatrial.cxx  function.cpp  ithvalTemplate.cxx  nthVal.cc  orderStruct.cxx  peaks.C  score  scoring.cxx  signalHand.cc  tempClass.cxx
ptrROOT/: CMakeLists.txt  pointer.cc
ptrROOT/include/: conPointer.hh  exPointer.hh  exTree.hh
ptrROOT/src/: conPointer.cc  exPointer.cc  exTree.cc
rootEx/fit/: .FittingDemo.C.swp  .combinedFit.C.swp  combinedFit.C  hsimple.root
rootEx/rtStlmap/: CMakeLists.txt  Makefile  testmap.cxx
rootEx/rtStlmap/src/: A.cxx
rootEx/rtStlmap/src/include/: A.h  LinkDef.hh
